@@ -2,11 +2,11 @@ package de.aivot.gover.backend.search.services;
 
 import de.aivot.gover.backend.search.dtos.SearchItemResponseDTO;
 import de.aivot.gover.backend.search.dtos.SearchRecentItemRequestDTO;
+import de.aivot.gover.backend.search.properties.SearchRecentItemProperties;
 import de.aivot.gover.backend.search.repositories.SearchRecentItemRepository;
 import jakarta.annotation.Nonnull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.context.event.ApplicationReadyEvent;
 import org.springframework.context.event.EventListener;
 import org.springframework.data.domain.PageRequest;
@@ -26,27 +26,18 @@ import java.util.concurrent.atomic.AtomicBoolean;
 @EnableScheduling
 public class SearchRecentItemService {
     private static final Logger logger = LoggerFactory.getLogger(SearchRecentItemService.class);
-    private static final int DEFAULT_MAX_ITEMS_PER_USER = 50;
-    private static final int DEFAULT_RETENTION_DAYS = 90;
 
     private final SearchRecentItemRepository searchRecentItemRepository;
     private final SearchItemService searchItemService;
-    private final int maxItemsPerUser;
-    private final int retentionDays;
+    private final SearchRecentItemProperties properties;
     private final AtomicBoolean cleanupRunning = new AtomicBoolean(false);
 
     public SearchRecentItemService(SearchRecentItemRepository searchRecentItemRepository,
                                    SearchItemService searchItemService,
-                                   @Value("${gover.search.recent.max-items-per-user:50}") Integer maxItemsPerUser,
-                                   @Value("${gover.search.recent.retention-days:90}") Integer retentionDays) {
+                                   SearchRecentItemProperties properties) {
         this.searchRecentItemRepository = searchRecentItemRepository;
         this.searchItemService = searchItemService;
-        this.maxItemsPerUser = maxItemsPerUser != null && maxItemsPerUser > 0
-                ? maxItemsPerUser
-                : DEFAULT_MAX_ITEMS_PER_USER;
-        this.retentionDays = retentionDays != null && retentionDays > 0
-                ? retentionDays
-                : DEFAULT_RETENTION_DAYS;
+        this.properties = properties;
     }
 
     @Nonnull
@@ -54,15 +45,15 @@ public class SearchRecentItemService {
             @Nonnull String userId,
             int size
     ) {
-        var normalizedSize = Math.max(1, Math.min(size, maxItemsPerUser));
-        var cutoff = Instant.now().minus(retentionDays, ChronoUnit.DAYS);
+        var normalizedSize = Math.clamp(size, 1, properties.getMaxItemsPerUser());
+        var cutoff = Instant.now().minus(properties.getRetentionDays(), ChronoUnit.DAYS);
         var recentItems = searchRecentItemRepository
                 .findAllByUserIdAndLastAccessedGreaterThanEqual(
                         userId,
                         cutoff,
                         PageRequest.of(
                                 0,
-                                maxItemsPerUser,
+                                properties.getMaxItemsPerUser(),
                                 Sort.by(Sort.Order.desc("lastAccessed"), Sort.Order.desc("id"))
                         )
         );
@@ -100,14 +91,16 @@ public class SearchRecentItemService {
                 request.originTable(),
                 request.id()
         );
-        searchRecentItemRepository.deleteOverflow(userId, maxItemsPerUser);
+        searchRecentItemRepository.deleteOverflow(userId, properties.getMaxItemsPerUser());
     }
 
+    @Transactional
     @EventListener(ApplicationReadyEvent.class)
     public void deleteExpiredRecentItemsOnStartup() {
         deleteExpiredRecentItems("startup");
     }
 
+    @Transactional
     @Scheduled(cron = "0 30 3 * * *", zone = "${gover.timezone}")
     public void deleteExpiredRecentItemsNightly() {
         deleteExpiredRecentItems("daily-schedule");
@@ -121,14 +114,14 @@ public class SearchRecentItemService {
         }
 
         try {
-            var cutoff = Instant.now().minus(retentionDays, ChronoUnit.DAYS);
+            var cutoff = Instant.now().minus(properties.getRetentionDays(), ChronoUnit.DAYS);
             var deletedCount = searchRecentItemRepository.deleteAllByLastAccessedBefore(cutoff);
 
             if (deletedCount > 0) {
                 logger.info(
                         "Deleted {} recent search item(s) older than {} day(s) (trigger={}).",
                         deletedCount,
-                        retentionDays,
+                        properties.getRetentionDays(),
                         trigger
                 );
             }
